# ShowMeTheTypes

./: .gitignore  README.md  pyproject.toml  setup.py
core/: __init__.py  main.py
showmethetypes/: __init__.py  core.py  handlers.py  registry.py
tests/: testing.ipynb
